# kiwi-shader

./: .gitignore  .gitmodules  README.md  build.ps1  configure.ps1  todo.md
assets/shaders/: annotated_demo.frag  default.frag  example_with_includes.frag  plasma.frag  raymarching.frag
assets/shaders/common/: colors.glsl  noise.glsl  sdf.glsl
examples/raymarching/: 01_sdf_basics.glsl  02_sdf_terrain.glsl  03_city.glsl
examples/raymarching/sdf/: operations.glsl  primitives.glsl
source/: CMakeLists.txt
source/dependency/glad/: CMakeLists.txt
source/include/utility/: AnnotationLexer.h  AnnotationParser.h  CameraController.h  DragDropManager.h  FullscreenQuad.h  Layer2D.h  Logger.h  SettingsManager.h  ShaderLayer.h  ShaderPreprocessor.h  StatusBar.h  UniformEditor.h  UniformParser.h  UniformTypes.h  colormaps.h  common.h  shader.h
source/src/: main.cpp  test.cpp
source/src/utility/: AnnotationLexer.cpp  AnnotationParser.cpp  CameraController.cpp  DragDropManager.cpp  FullscreenQuad.cpp  Logger.cpp  Render2D.cpp  SettingsManager.cpp  ShaderLayer.cpp  ShaderPreprocessor.cpp  StatusBar.cpp  UniformEditor.cpp  UniformParser.cpp  colormaps.cpp  common.cpp  shader.cpp
